--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,37 @@
 :root {
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
-		'Helvetica Neue', sans-serif;
+	/* General colors */
+	--white: rgb(236, 239, 244);
+	--grey: #4c566a;
+	--blue: #00bcd4;
+	--blue-dark: rgb(0, 122, 204);
+	--aqua: rgb(3, 212, 191);
+	--dark-text: #b8b7d1;
+	--dark-nav-link: #9694ba;
+
+	/* OneDark Vivid palette */
+	--background: #282c34;
+	--purple: #d55fde;
+	--error: #f44747;
+	--coral: #ef596f;
+	--whiskey: #d19a66;
+	--chalky: #e5c07b;
+	--lightDark: #7f848e;
+	--dark: #5c6370;
+	--malibu: #61afef;
+	--green: #89ca78;
+	--fountainBlue: #2bbac5;
+	--invalid: #ffffff;
+
+	/* Main colors */
+	--backgroundColor: var(--background);
+	--fontColor: var(--white);
+	--selection: var(--primaryLight);
+	--primaryDark: var(--fountainBlue);
+	--primary: var(--fountainBlue);
+	--primaryLight: var(--fountainBlue);
+}
+
+::selection {
+	background: var(--selection);
+	color: var(--white);
 }
