refactor: CSS transitions

--- a/src/global.css
+++ b/src/global.css
@@ -3,11 +3,6 @@
 	--color-background: #282c34;
 	--color-primary: #2bbac5;
 	--color-secondary: #ef596f;
-
-	/* Transitions */
-	--transitionDefault: all 0.5s ease-in-out 0.3s;
-	--transitionThreeMs: all 0.3s ease-in-out 0.2s;
-	--transitionSecond: all 1s ease;
 }
 
 /* Write your global styles here, in PostCSS syntax */
@@ -41,8 +36,12 @@ p {
 	}
 }
 
+.transition-default {
+	@apply transition duration-300 ease-in-out;
+}
+
 .border-bottom {
-	@apply border-b-2 border-transparent hover:border-primary transition duration-500 ease-in-out;
+	@apply border-b-2 border-transparent hover:border-primary transition duration-300 ease-in-out;
 }
 
 .list-tags {
@@ -50,5 +49,5 @@ p {
 }
 
 svg {
-	@apply h-5 w-5 fill-current group-hover:text-primary transition duration-500;
+	@apply h-5 w-5 fill-current hover:text-primary transition duration-300 ease-linear;
 }
